# plex-trakt

./: Dockerfile  pyproject.toml  requirements.txt
plex_trakt/: server.py
