[tool.poetry]
name = "plex-trakt"
version = "0.1.0"
description = ""
authors = ["Alex Raskin <alexraskin@fastmail.fm>"]
readme = "README.md"
packages = [{include = "plex_trakt"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
